--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "aws s3 sync build/ s3://mobilityapp"
+    "deploy": "aws s3 sync build/ s3://mobility-app"
   },
   "eslintConfig": {
     "extends": "react-app"
